# news-browser

./: .gitignore  generate-icons.py  index.html  package-lock.json  package.json
docs/: agent-design.md  index.html
docs/compose/plans/: 2026-07-08-ai-newspaper-generation-plan.md
docs/compose/specs/: 2026-07-08-ai-newspaper-generation-design.md
src/: App.css  App.tsx  ai-config.ts  index.css  search-config.ts  settings.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_config.rs  ai_generator.rs  lib.rs  main.rs  search_config.rs  search_tools.rs  settings.rs
src-tauri/src/agent/: mod.rs  nodes.rs  prompts.rs  state.rs
src/components/: GenerateStatus.tsx  ReportCard.css  ReportCard.tsx  ReportViewer.css  ReportViewer.tsx  SearchConfigTab.tsx  SettingsModal.css  SettingsModal.tsx  Sidebar.css  Sidebar.tsx  StatsBar.css  StatsBar.tsx  ThemeToggle.css  ThemeToggle.tsx
